TM-11214 Fix overlapping issues on application edit views

--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -7,6 +7,9 @@
 .tds-angular-component-content
   .modal-body
     padding: 6px 18px
+    display: flex
+    justify-content: center
+    align-items: center
   .prop
     padding: 5px
   .prop .name
@@ -32,12 +35,9 @@
   .prop a
     color: #00E
   table
-    border-collapse: separate
-    border-spacing: 2px
-    border-collapse: separate
-    padding: 5px 0
     width: 100%
-    /* border: 1px solid #63a242 */
+    tr
+      border: 2px solid #fff
     th
       background: #CCCCCC
       color: #000
